# lpc_vocoder

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.run/: Run code_qa.run.xml  bandit.run.xml  decode.run.xml  encode.run.xml  flake8.run.xml  gen_docs.run.xml  mypy.run.xml  test.run.xml  test_subjective.run.xml  vocoder.run.xml
docs/: conf.py  index.rst  theory.rst  usage_info.rst
docs/vocoder_api/: decoder.rst  encoder.rst  index.rst
src/lpc_vocoder/: __init__.py
src/lpc_vocoder/decode/: __init__.py  __main__.py  lpc_decoder.py
src/lpc_vocoder/encode/: __init__.py  __main__.py  lpc_encoder.py
src/lpc_vocoder/utils/: dataclasses.py  pitch_estimation.py  utils.py
test/: conftest.py  test_pitch_detector.py  test_vocoder.py
test/audios/: README.md
