[tool.poetry]
name = "lpc-vocoder"
version = "0.1.0"
description = ""
authors = ["hkxs <lalvarezf25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaudio = "^0.2.14"
librosa = "^0.10.2.post1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
